<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/blue"
    android:id="@+id/toolbar_layout">

    <LinearLayout
        android:id="@+id/group_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:tint="@color/white"
            android:src="@drawable/back"/>
        <TextView
            android:id="@+id/group_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:text="@string/description"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/chat_text_view"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/chat"/>
        <TextView
            android:id="@+id/appointments_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15dp"
            android:alpha="0.2"
            android:padding="10dp"
            android:text="@string/appointments"/>
        <TextView
            android:id="@+id/overview_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:alpha="0.2"
            android:textSize="15dp"
            android:padding="10dp"
            android:text="@string/overview"/>

    </LinearLayout>


</LinearLayout>