<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.GroupOverviewFragment"
    android:id="@+id/group_overview_fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:id="@+id/description_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="15dp"
        android:maxLength="256"
        android:maxLines="4"
        android:background="@null"
        android:layout_below="@id/description_title"
        android:textColor="@color/blue"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/description_text_view"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_below="@id/access_code_text_view"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:id="@+id/language_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:maxLength="64"
        android:maxLines="1"
        android:textSize="15dp"
        android:background="@null"
        android:singleLine="true"
        android:layout_below="@id/language_title"
        android:textColor="@color/blue"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/language_text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_code"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_below="@id/description_text_view"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:id="@+id/access_code_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_code"
        android:textSize="15dp"
        android:background="@null"
        android:layout_below="@id/access_code_title"
        android:textColor="@color/blue"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/access_code_text_view"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_below="@id/language_text_view"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:id="@+id/progress_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textSize="15dp"
        android:layout_below="@id/language_text_view"
        android:textColor="@color/blue"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/progress_text_view"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:layout_below="@id/progress_title"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:id="@+id/progress_seek_bar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@id/progress_seek_bar"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:id="@+id/members_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold_member"
        android:layout_toEndOf="@id/members_title"
        android:layout_alignBottom="@id/members_title"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@id/progress_seek_bar"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:id="@+id/update_admin_rights"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/progress"
        android:layout_below="@id/members_title"
        android:layout_above="@id/submit_button"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/members_recycler_view"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_green_button"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:textSize="15dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/submit_button"/>

</RelativeLayout>