<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CreateGroupActivity"
    android:id="@+id/create_group_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/title_bar"
        android:padding="15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/peer_to_learn"
            android:id="@+id/Peer2Learn_image_view"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/profile_image_view"
            android:src="@drawable/profile_icon"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_below="@id/title_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:textSize="30dp"
        android:textStyle="bold"
        android:id="@+id/groups_text_view"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_group_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/groups_text_view"
        android:id="@+id/module_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textColor="@color/blue"
            android:id="@+id/name_of_the_module_text_title_text_view"
            android:text="@string/name_of_module"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:id="@+id/module_edit_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLength="64"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/blue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/module_layout"
        android:layout_above="@id/number_of_users_layout"
        android:id="@+id/description_layout"
        android:background="@drawable/description_background_edit_text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textColor="@color/blue"
            android:textSize="10dp"
            android:textStyle="bold" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:textSize="15dp"
            android:maxLength="256"
            android:maxLines="4"
            android:background="@null"
            android:id="@+id/description_edit_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/blue"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/submit_button"
        android:id="@+id/number_of_users_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_users"
            android:id="@+id/number_of_users_title"
            android:textColor="@color/blue"
            android:textSize="15dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/maximum_members_layout"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/increment"
                android:layout_marginEnd="10dp"
                android:id="@+id/increment_button"
                android:onClick="incrementMaxParticipant"
                android:tint="@color/blue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/number_of_users_text_view"
                android:textSize="15dp"
                android:text="4"
                android:textStyle="bold"
                android:textColor="@color/blue"/>
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/decrement"
                android:onClick="decrementMinParticipant"
                android:id="@+id/decrement_button"
                android:tint="@color/blue"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/private_group_title"
            android:layout_below="@id/number_of_users_title"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:text="@string/private_group"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/private_group_switch_button"
            android:layout_below="@id/number_of_users_title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_blue_edit_text"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:id="@+id/access_code_layout"
            android:layout_below="@id/private_group_title"
            android:orientation="vertical">

            <TextView
                android:id="@+id/access_code_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/access_code"
                android:textColor="@color/blue"
                android:textSize="10dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:id="@+id/access_code_text_view"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/language_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_blue_edit_text"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_below="@id/access_code_layout"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/blue"
                android:text="@string/language"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:id="@+id/language_text_title"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:maxLength="64"
                android:maxLines="1"
                android:singleLine="true"
                android:id="@+id/language_edit_text"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/blue"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/round_green_button"
        android:padding="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>